# rust-opengl-basics

./: Cargo.toml  build.rs
assets/models/: globe.blend  globe.mtl
assets/shaders/: square.frag  square.vert  triangle.frag  triangle.vert
gl-render-derive/: Cargo.toml
local-libs/gl/: Cargo.toml
local_libs/gl/: build.rs
local_libs/gl/src/: lib.rs
render-gl-derive/: Cargo.toml
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: gl_render.rs  main.rs  resources.rs  square.rs  triangle.frag  triangle.rs  triangle.vert
src/gl_render/: buffer.rs  color_buffer.rs  data.rs  mod.rs  shader.rs  texture.rs  transform.rs  viewport.rs
