[package]
name = "winit-opengl"
version = "0.1.0"
authors = ["SuniTheFish <benjamin.hinchliff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gl_debug = ["gl/debug"]

[dependencies]
glutin = "0.24.1"
gl = { path = "local_libs/gl" }
render-gl-derive = { path = "render-gl-derive" }
thiserror = "1.0.20"
vec-2-10-10-10 = "0.1.2"

[build-dependencies]
walkdir = "2.3.1"