[package]
name = "winit-opengl"
version = "0.1.0"
authors = ["SuniTheFish <benjamin.hinchliff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gl_debug = ["gl/debug"]

[dependencies]
glutin = "0.24.1"
gl = { path = "local-libs/gl" }
gl-render-derive = { path = "gl-render-derive" }
thiserror = "1.0.20"
anyhow = "1.0.31"
vec-2-10-10-10 = "0.1.2"
nalgebra-glm = "0.7.0"
image = "0.23.7"

[build-dependencies]
walkdir = "2.3.1"