[package]
name = "render_gl_derive"
version = "0.1.0"
authors = ["SuniTheFish <benjamin.hinchliff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.7"
syn = "1.0.34"
proc-macro2 = "1.0.18"

[lib]
proc-macro = true
